# K-smos-The-Trust-Protocol

Kósmos The Trust Protocol/: Cargo.toml  README.md
Kósmos The Trust Protocol/DID Registry/: Cargo.toml  lib.rs  test.rs
Kósmos The Trust Protocol/Issuer Whitelist/: Cargo.toml  lib.rs  test.rs
Kósmos The Trust Protocol/ZKP Verifier/: Cargo.toml  lib.rs  test.rs
